--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "dev": "node log.js dev & vite --config vite/config.dev.mjs",
         "build": "node log.js build & vite build --config vite/config.prod.mjs",
         "dev-nolog": "vite --config vite/config.dev.mjs",
-        "build-nolog": "vite build --config vite/config.prod.mjs"
+        "build-nolog": "vite build --config vite/config.prod.mjs",
+        "update:levels": "cp -a ggj-2026/simplified/. public/assets/"
+
     },
     "devDependencies": {
         "typescript": "~5.7.2",
