--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     },
     "homepage": "https://github.com/phaserjs/template-vite-ts#readme",
     "scripts": {
-        "dev": "node log.js dev & vite --config vite/config.dev.mjs",
+        "dev": "node log.js dev & npm run watch & vite --config vite/config.dev.mjs",
+        "watch": "onchange 'ggj-2026/simplified/**/*.{png,json,csv}' -- npm run update:levels",
         "build": "node log.js build & vite build --config vite/config.prod.mjs",
         "dev-nolog": "vite --config vite/config.dev.mjs",
         "build-nolog": "vite build --config vite/config.prod.mjs",
         "update:levels": "cp -a ggj-2026/simplified/. public/assets/"
-
     },
     "devDependencies": {
+        "onchange": "^7.1.0",
         "typescript": "~5.7.2",
         "vite": "^6.3.1"
     },
