--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "phaser": "^3.90.0",
+        "phaser3-rex-plugins": "^1.80.18",
         "terser": "^5.39.0"
     }
 }
